k8s-config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-page-dave-lee
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      component: web
      student: dave-lee
  template:
    metadata:
      labels:
        component: web
        student: dave-lee
    spec:
      containers:
        - name: static
          image: ensaas/wisepaas-static:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 10m
              memory: 32Mi
              ephemeral-storage: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
