k8s-config/static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: static
          image: ensaas/wisepaas-static:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: 10m
              memory: 32Mi
              ephemeral-storage: 32Mi
            requests:
              cpu: 10m
              memory: 32Mi
