k8s-config/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-page
spec:
  type: ClusterIP
  selector:
    component: web
    dave: lee
  ports:
    - port: 3000
      targetPort: 3000
